--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <main>
+        <img src="foto.jpg">
         <h1>Кулешова Дарья</h1>
         <h2>Начинающий специалист</h2>
       
